New GUI changes (still being worked on)